crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__lambda_default_parameters.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/lambda_default_parameters.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..20,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..20,
                    value: Lambda(
                        ExprLambda {
                            node_index: NodeIndex(None),
                            range: 0..20,
                            parameters: Some(
                                Parameters {
                                    range: 7..17,
                                    node_index: NodeIndex(None),
                                    posonlyargs: [],
                                    args: [
                                        ParameterWithDefault {
                                            range: 7..8,
                                            node_index: NodeIndex(None),
                                            parameter: Parameter {
                                                range: 7..8,
                                                node_index: NodeIndex(None),
                                                name: Identifier {
                                                    id: Name("a"),
                                                    range: 7..8,
                                                    node_index: NodeIndex(None),
                                                },
                                                annotation: None,
                                                convention: AstParamConvention {
                                                    ownership: Borrow,
                                                    mutability: Immutable,
                                                },
                                            },
                                            default: None,
                                        },
                                        ParameterWithDefault {
                                            range: 10..14,
                                            node_index: NodeIndex(None),
                                            parameter: Parameter {
                                                range: 10..11,
                                                node_index: NodeIndex(None),
                                                name: Identifier {
                                                    id: Name("b"),
                                                    range: 10..11,
                                                    node_index: NodeIndex(None),
                                                },
                                                annotation: None,
                                                convention: AstParamConvention {
                                                    ownership: Borrow,
                                                    mutability: Immutable,
                                                },
                                            },
                                            default: Some(
                                                NumberLiteral(
                                                    ExprNumberLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 12..14,
                                                        value: Int(
                                                            20,
                                                        ),
                                                    },
                                                ),
                                            ),
                                        },
                                        ParameterWithDefault {
                                            range: 16..17,
                                            node_index: NodeIndex(None),
                                            parameter: Parameter {
                                                range: 16..17,
                                                node_index: NodeIndex(None),
                                                name: Identifier {
                                                    id: Name("c"),
                                                    range: 16..17,
                                                    node_index: NodeIndex(None),
                                                },
                                                annotation: None,
                                                convention: AstParamConvention {
                                                    ownership: Borrow,
                                                    mutability: Immutable,
                                                },
                                            },
                                            default: None,
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kwarg: None,
                                },
                            ),
                            body: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 19..20,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | lambda a, b=20, c: 1
  |                 ^ Syntax Error: Parameter without a default cannot follow a parameter with a default
  |
